Añadiendo autorizaciones segun el rol

--- a/eCommerce.WebAPI/appsettings.json
+++ b/eCommerce.WebAPI/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection" : "Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SID=xe)));User Id=system;Password=Banegas1234;"
-  }
+  },
+  "tokenKey": "palabra_super_secreta_xdpalabra_super_secreta_xdpalabra_super_secreta_xdpalabra_super_secreta_xd"
 }
