--- a/eCommerce.Services/eCommerce.Services.csproj
+++ b/eCommerce.Services/eCommerce.Services.csproj
@@ -2,6 +2,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\eCommerce.Persistence\eCommerce.Persistence.csproj" />
+    <ProjectReference Include="..\eCommerce.DTOs\eCommerce.DTOs.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
